--- a/ChefMate/index.html
+++ b/ChefMate/index.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link href="https://fonts.googleapis.com/css2?family=Salsa&display=swap" rel="stylesheet" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" >
+    <link href="https://fonts.googleapis.com/css2?family=Salsa&display=swap" rel="stylesheet" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Vite + React + TS</title>
   </head>
   <body>
